<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:icon="@drawable/settings_minimalistic_svgrepo_com"
        android:title="@string/options"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:singleLineTitle="true" />

    <PreferenceCategory
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:icon="@drawable/menu_dots_svgrepo_com"
        app:singleLineTitle="false"
        app:title="@string/language_settings">

        <ListPreference
            android:defaultValue="en"
            android:icon="@drawable/global_svgrepo_com"
            app:entries="@array/app_language_entries"
            app:entryValues="@array/app_language_values"
            app:key="app_language"
            app:title="@string/app_language_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:icon="@drawable/menu_dots_svgrepo_com"
        app:singleLineTitle="false"
        app:title="@string/legal">

        <com.rpmstudio.texttospeech.utils.WebLinkPreference
            android:icon="@drawable/shield_check_svgrepo_com"
            android:key="terms_of_service"
            android:title="@string/terms_of_service_title"
            app:url="@string/terms_of_use_url" />

        <com.rpmstudio.texttospeech.utils.WebLinkPreference
            android:icon="@drawable/shield_minimalistic_svgrepo_com"
            android:key="privacy_policy"
            android:title="@string/privacy_policy_title"
            app:url="@string/privacy_policy_url" />
    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:icon="@drawable/menu_dots_svgrepo_com"
        app:singleLineTitle="false"
        app:title="@string/support">

        <Preference
            app:icon="@drawable/hand_stars_svgrepo_com"
            app:key="rate_app"
            app:title="@string/rate_app_title" />

        <Preference
            android:icon="@drawable/letter_svgrepo_com"
            app:key="feedback"
            app:title="@string/feedback_title" />

        <Preference
            android:icon="@drawable/info_circle_svgrepo_com"
            app:key="about"
            app:title="@string/about_title" />

        <Preference
            android:icon="@drawable/smartphone_update_svgrepo_com"
            android:key="check_update"
            app:singleLineTitle="false"
            app:title="@string/check_update" />
    </PreferenceCategory>
</PreferenceScreen>