<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/spacing_normal"
    android:layout_marginTop="@dimen/spacing_medium"
    android:layout_marginEnd="@dimen/spacing_normal"
    android:layout_marginBottom="@dimen/spacing_medium"
    android:padding="@dimen/spacing_medium"
    app:cardCornerRadius="@dimen/spacing_normal"
    app:cardElevation="@dimen/spacing_xTiny"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_70sdp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_minus35sdp"
            android:background="@drawable/round_back_while_stroke_1000"
            android:padding="@dimen/spacing_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_back_white_1000" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/dialog_rating_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:padding="@dimen/spacing_small"
                android:src="@drawable/letter_svgrepo_com" />
        </RelativeLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewRateTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:gravity="center"
            android:text="@string/feedback_title"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_rating_feedback"
            android:layout_width="0dp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:gravity="top|start"
            android:hint="@string/feedback_hint_text"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:padding="@dimen/spacing_small"
            android:scrollbars="vertical"
            android:textSize="@dimen/text_smallest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRateTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_double"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_double"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:paddingTop="@dimen/spacing_small"
            android:paddingBottom="@dimen/spacing_small"
            android:text="@string/submit_button"
            android:textAllCaps="false"
            android:textSize="@dimen/text_small"
            app:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_rating_feedback">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_feedback_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_small"
            android:padding="@dimen/spacing_tiny"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/close_circle_svgrepo_com"
            app:tint="@color/colorAccent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>