<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/spacing_normal"
    android:layout_marginTop="@dimen/spacing_medium"
    android:layout_marginEnd="@dimen/spacing_normal"
    android:layout_marginBottom="@dimen/spacing_medium"
    android:padding="@dimen/spacing_medium"
    app:cardCornerRadius="@dimen/spacing_normal"
    app:cardElevation="@dimen/spacing_xTiny"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_70sdp"
            android:background="?attr/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_minus35sdp"
            android:background="@drawable/round_back_while_stroke_1000"
            android:padding="@dimen/spacing_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_back_white_1000" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/dialog_rating_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:padding="@dimen/spacing_small"
                android:src="@drawable/hand_stars_svgrepo_com" />
        </RelativeLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewRateTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:gravity="center"
            android:text="@string/feedback_dialog_title"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:lineHeight="@dimen/text_board_large"
            tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:gravity="center"
            android:text="@string/rating_promote"
            android:textSize="@dimen/text_smallest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRateTitle"
            app:lineHeight="@dimen/text_medium" />

        <LinearLayout
            android:id="@+id/linear_layout_RatingBar"
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_xDouble"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRate">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_view_star_1"
                android:layout_width="@dimen/spacing_xDouble"
                android:layout_height="match_parent"
                android:padding="@dimen/_1sdp"
                android:src="@drawable/ic_round_star" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_view_star_2"
                android:layout_width="@dimen/spacing_xDouble"
                android:layout_height="match_parent"
                android:padding="@dimen/_1sdp"
                android:src="@drawable/ic_round_star" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_view_star_3"
                android:layout_width="@dimen/spacing_xDouble"
                android:layout_height="match_parent"
                android:padding="@dimen/_1sdp"
                android:src="@drawable/ic_round_star" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_view_star_4"
                android:layout_width="@dimen/spacing_xDouble"
                android:layout_height="match_parent"
                android:padding="@dimen/_1sdp"
                android:src="@drawable/ic_round_star" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_view_star_5"
                android:layout_width="@dimen/spacing_xDouble"
                android:layout_height="match_parent"
                android:padding="@dimen/_1sdp"
                android:src="@drawable/ic_round_star" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_select_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_double"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_double"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:paddingTop="@dimen/spacing_small"
            android:paddingBottom="@dimen/spacing_small"
            android:text="@string/select_star"
            android:textAllCaps="false"
            android:textSize="@dimen/text_small"
            app:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_RatingBar">

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_small"
            android:padding="@dimen/spacing_tiny"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/close_circle_svgrepo_com"
            app:tint="@color/colorAccent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>